--- a/index.html
+++ b/index.html
@@ -150,8 +150,8 @@
                 <img src="images/portfolio2.jpg" alt="">
                 <div class="portfolio-layer">
                     <h4>Jogo da Memória</h4>
-                    <p>Jogo da memória feito com HTML / CSS / JS</p>
-                    <a href="projetos/Jogo da Memoria/index.html" target="_blank"><i class='bx bx-link-external'></i></a>
+                    <p>Em breve</p>
+                    <a href="#" target="_blank"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
 
