--- a/index.html
+++ b/index.html
@@ -138,16 +138,16 @@
 
         <div class="portfolio-container">
             <div class="portfolio-box">
-                <img src="./images/portfolio1.jpg" alt="">
+                <img src="../images/portfolio1.jpg" alt="">
                 <div class="portfolio-layer">
                     <h4>Cartão de Crédito</h4>
                     <p>Exemplo de Cartão de Crédito feito com HTML / CSS</p>
-                    <a href="./projetos/Cartão de Crédito/cartao-credito.html" target="_blank"><i class='bx bx-link-external'></i></a>
+                    <a href="../projetos/Cartão de Crédito/cartao-credito.html" target="_blank"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
 
             <div class="portfolio-box">
-                <img src="./images/portfolio2.jpg" alt="">
+                <img src="../images/portfolio2.jpg" alt="">
                 <div class="portfolio-layer">
                     <h4>Jogo da Memória</h4>
                     <p>Em breve</p>
@@ -156,38 +156,38 @@
             </div>
 
             <div class="portfolio-box">
-                <img src="./images/portfolio3.jpg" alt="">
+                <img src="../images/portfolio3.jpg" alt="">
                 <div class="portfolio-layer">
                     <h4>Jogo da Velha</h4>
                     <p>Feito com HTML / CSS / JS</p>
-                    <a href="./projetos/Jogo da Velha/index.html" target="_blank"><i class='bx bx-link-external'></i></a>
+                    <a href="../projetos/Jogo da Velha/index.html" target="_blank"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
 
             <div class="portfolio-box">
-                <img src="./images/portfolio4.jpg" alt="">
+                <img src="../images/portfolio4.jpg" alt="">
                 <div class="portfolio-layer">
                     <h4>Login Page</h4>
                     <p>Exemplo de Página de Login Feito com HTML / CSS</p>
-                    <a href="./projetos/Login-Page/login-page.html" target="_blank"><i class='bx bx-link-external'></i></a>
+                    <a href="../projetos/Login-Page/login-page.html" target="_blank"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
 
             <div class="portfolio-box">
-                <img src="./images/portfolio5.jpg" alt="">
+                <img src="../images/portfolio5.jpg" alt="">
                 <div class="portfolio-layer">
                     <h4>Login Netflix</h4>
                     <p>Página de login da Netflix feito com HTML / CSS</p>
-                    <a href="./projetos/Netflix/index.html" target="_blank"><i class='bx bx-link-external'></i></a>
+                    <a href="../projetos/Netflix/index.html" target="_blank"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
 
             <div class="portfolio-box">
-                <img src="./images/portfolio6.jpg" alt="">
+                <img src="../images/portfolio6.jpg" alt="">
                 <div class="portfolio-layer">
                     <h4>Quiz</h4>
                     <p>Quiz feito com HTML / CSS / JS</p>
-                    <a href="./projetos/Quiz/quiz.html" target="_blank"><i class='bx bx-link-external'></i></a>
+                    <a href="../projetos/Quiz/quiz.html" target="_blank"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
         </div>
