--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 
         <div class="portfolio-container">
             <div class="portfolio-box">
-                <img src="../images/portfolio1.jpg" alt="">
+                <img src="./images/portfolio1.jpg" alt="">
                 <div class="portfolio-layer">
                     <h4>Cartão de Crédito</h4>
                     <p>Exemplo de Cartão de Crédito feito com HTML / CSS</p>
@@ -147,7 +147,7 @@
             </div>
 
             <div class="portfolio-box">
-                <img src="../images/portfolio2.jpg" alt="">
+                <img src="./images/portfolio2.jpg" alt="">
                 <div class="portfolio-layer">
                     <h4>Jogo da Memória</h4>
                     <p>Em breve</p>
@@ -156,7 +156,7 @@
             </div>
 
             <div class="portfolio-box">
-                <img src="../images/portfolio3.jpg" alt="">
+                <img src="./images/portfolio3.jpg" alt="">
                 <div class="portfolio-layer">
                     <h4>Jogo da Velha</h4>
                     <p>Feito com HTML / CSS / JS</p>
@@ -165,7 +165,7 @@
             </div>
 
             <div class="portfolio-box">
-                <img src="../images/portfolio4.jpg" alt="">
+                <img src="./images/portfolio4.jpg" alt="">
                 <div class="portfolio-layer">
                     <h4>Login Page</h4>
                     <p>Exemplo de Página de Login Feito com HTML / CSS</p>
@@ -174,7 +174,7 @@
             </div>
 
             <div class="portfolio-box">
-                <img src="../images/portfolio5.jpg" alt="">
+                <img src="./images/portfolio5.jpg" alt="">
                 <div class="portfolio-layer">
                     <h4>Login Netflix</h4>
                     <p>Página de login da Netflix feito com HTML / CSS</p>
@@ -183,7 +183,7 @@
             </div>
 
             <div class="portfolio-box">
-                <img src="../images/portfolio6.jpg" alt="">
+                <img src="./images/portfolio6.jpg" alt="">
                 <div class="portfolio-layer">
                     <h4>Quiz</h4>
                     <p>Quiz feito com HTML / CSS / JS</p>
