--- a/index.html
+++ b/index.html
@@ -141,7 +141,10 @@
                 <img src="./images/portfolio1.jpg" alt="">
                 <div class="portfolio-layer">
                     <h4>Cartão de Crédito</h4>
-                    <p>Exemplo de Cartão de Crédito feito com HTML / CSS</p>
+                    <p>
+                        <i class='bx bxl-html5'></i>
+                        <i class='bx bxl-css3' ></i>
+                    </p>
                     <a href="../projetos/Cartão de Crédito/cartao-credito.html" target="_blank"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
@@ -159,7 +162,11 @@
                 <img src="./images/portfolio3.jpg" alt="">
                 <div class="portfolio-layer">
                     <h4>Jogo da Velha</h4>
-                    <p>Feito com HTML / CSS / JS</p>
+                    <p>
+                        <i class='bx bxl-html5'></i>
+                        <i class='bx bxl-css3' ></i>
+                        <i class='bx bxl-nodejs' ></i>
+                    </p>
                     <a href="../projetos/Jogo da Velha/index.html" target="_blank"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
@@ -168,7 +175,10 @@
                 <img src="./images/portfolio4.jpg" alt="">
                 <div class="portfolio-layer">
                     <h4>Login Page</h4>
-                    <p>Exemplo de Página de Login Feito com HTML / CSS</p>
+                    <p>
+                        <i class='bx bxl-html5'></i>
+                        <i class='bx bxl-css3' ></i>
+                    </p>
                     <a href="../projetos/Login-Page/login-page.html" target="_blank"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
@@ -177,7 +187,10 @@
                 <img src="./images/portfolio5.jpg" alt="">
                 <div class="portfolio-layer">
                     <h4>Login Netflix</h4>
-                    <p>Página de login da Netflix feito com HTML / CSS</p>
+                    <p>
+                        <i class='bx bxl-html5'></i>
+                        <i class='bx bxl-css3' ></i>
+                    </p>
                     <a href="../projetos/Netflix/index.html" target="_blank"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
@@ -186,7 +199,11 @@
                 <img src="./images/portfolio6.jpg" alt="">
                 <div class="portfolio-layer">
                     <h4>Quiz</h4>
-                    <p>Quiz feito com HTML / CSS / JS</p>
+                    <p>
+                        <i class='bx bxl-html5'></i>
+                        <i class='bx bxl-css3' ></i>
+                        <i class='bx bxl-nodejs' ></i>
+                    </p>
                     <a href="../projetos/Quiz/quiz.html" target="_blank"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
