--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="home-content">
             <h3>Escrever alguma coisa</h3>
             <h1>Pablo Cavalcante</h1>
-            <h3>Eu sou um <span class="multiple-text"></span></h3>
+            <h3>Estudante de <span class="multiple-text"></span></h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
                 Distinctio vel rem perspiciatis aliquam, quia quaerat!
             </p>
