--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <a href="#about">Sobre</a>
             <a href="#services">Conhecimentos</a>
             <a href="#portfolio">Portfolio</a>
-            <a href="#contact">Contact</a>
+            <a href="#contact">Contato</a>
         </nav>
     </header>
 
