--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                         <i class='bx bxl-html5'></i>
                         <i class='bx bxl-css3' ></i>
                     </p>
-                    <a href="../projetos/Cartão de Crédito/cartao-credito.html" target="_blank"><i class='bx bx-link-external'></i></a>
+                    <a href="./projetos/Cartão de Crédito/cartao-credito.html" target="_blank"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
 
@@ -167,7 +167,7 @@
                         <i class='bx bxl-css3' ></i>
                         <i class='bx bxl-nodejs' ></i>
                     </p>
-                    <a href="../projetos/Jogo da Velha/index.html" target="_blank"><i class='bx bx-link-external'></i></a>
+                    <a href="./projetos/Jogo da Velha/index.html" target="_blank"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
 
@@ -179,7 +179,7 @@
                         <i class='bx bxl-html5'></i>
                         <i class='bx bxl-css3' ></i>
                     </p>
-                    <a href="../projetos/Login-Page/login-page.html" target="_blank"><i class='bx bx-link-external'></i></a>
+                    <a href="./projetos/Login-Page/login-page.html" target="_blank"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
 
@@ -191,7 +191,7 @@
                         <i class='bx bxl-html5'></i>
                         <i class='bx bxl-css3' ></i>
                     </p>
-                    <a href="../projetos/Netflix/index.html" target="_blank"><i class='bx bx-link-external'></i></a>
+                    <a href="./projetos/Netflix/index.html" target="_blank"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
 
@@ -204,7 +204,7 @@
                         <i class='bx bxl-css3' ></i>
                         <i class='bx bxl-nodejs' ></i>
                     </p>
-                    <a href="../projetos/Quiz/quiz.html" target="_blank"><i class='bx bx-link-external'></i></a>
+                    <a href="./projetos/Quiz/quiz.html" target="_blank"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
         </div>
