--- a/index.html
+++ b/index.html
@@ -30,26 +30,26 @@
             <a href="#about">Sobre</a>
             <a href="#services">Conhecimentos</a>
             <a href="#portfolio">Portfolio</a>
-            <a href="#contact">Contato</a>
+            <!-- <a href="#contact">Contato</a> -->
         </nav>
     </header>
 
     <!-- home section  -->
     <section class="home" id="home">
         <div class="home-content">
-            <h3>Escrever alguma coisa</h3>
+            <h3>Oi, eu sou o</h3>
             <h1>Pablo Cavalcante</h1>
             <h3>Estudante de <span class="multiple-text"></span></h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Distinctio vel rem perspiciatis aliquam, quia quaerat!
+            <p>Estou no 4º Semestre de Ciências da computação e também estudo sobre Front-end,
+                focado no desenvolvimento Web
             </p>
             <div class="social-media">
                 <a href="https://github.com/EoPablo" target="_blank"><i class='bx bxl-github'></i></a>
                 <a href="https://www.linkedin.com/in/pablopinheirocavalcante/" target="_blank"><i class='bx bxl-linkedin' ></i></a>
                 <a href="https://api.whatsapp.com/send/?phone=5511956291507&text&type=phone_number&app_absent=0" target="_blank"><i class='bx bxl-whatsapp'></i></a>
             </div>
-            <a href="#" class="btn">Download CV</a>
-        </div>
+                <a href="cv-pablo.pdf" download class="btn">Download CV</a>
+            </div>
 
         <div class="home-img">
             <img src="./images/programming.svg" alt="">
@@ -64,12 +64,10 @@
 
         <div class="about-content">
             <h2 class="heading">Sobre <span>Mim</span></h2>
-            <h3>Estudante de Frontend</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Nostrum cupiditate consequuntur nisi recusandae itaque vitae,
-                suscipit aspernatur minus saepe, magnam pariatur.
-                Sequi, neque eveniet. Quaerat qui distinctio omnis eum earum 
-                recusandae aspernatur nemo velit quo? Ut magnam quidem rem obcaecati.
+            <h3>Futuro Frontend Developer</h3>
+            <p>Me chamo Pablo Pinheiro Cavalcante, sou estudante de Ciências da Computação,
+                estou no 4º Semestre, gosto muito de tecnologias e pretendo seguir uma carreira
+                como Web Development.
             </p>
             <!-- <a href="#" class="btn">Read More</a> -->
         </div>
@@ -125,7 +123,7 @@
             <div class="services-box">
                 <i class='bx bxl-typescript' ></i>
                 <h3>TypeScript</h3>
-                <p>TypeScript é uma linguagem de programação de código aberto desenvolvida pela Microsoft.
+                <p>TypeScript é uma linguagem de programação de código aberto desenvolvida pela Microsoft é um superconjunto estrito de JavaScript.
                 </p>
                 <!-- <a href="#" class="btn">Read More</a> -->
             </div>
@@ -152,9 +150,12 @@
             <div class="portfolio-box">
                 <img src="./images/portfolio2.jpg" alt="">
                 <div class="portfolio-layer">
-                    <h4>Jogo da Memória</h4>
-                    <p>Em breve</p>
-                    <a href="#" target="_blank"><i class='bx bx-link-external'></i></a>
+                    <h4>Login Instagram</h4>
+                    <p>
+                        <i class='bx bxl-html5'></i>
+                        <i class='bx bxl-css3' ></i>
+                    </p>
+                    <a href="./projetos/Login - Instagram/index.html" target="_blank"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
 
@@ -186,12 +187,12 @@
             <div class="portfolio-box">
                 <img src="./images/portfolio5.jpg" alt="">
                 <div class="portfolio-layer">
-                    <h4>Login Netflix</h4>
+                    <h4>Lâmpada</h4>
                     <p>
                         <i class='bx bxl-html5'></i>
                         <i class='bx bxl-css3' ></i>
                     </p>
-                    <a href="./projetos/Netflix/index.html" target="_blank"><i class='bx bx-link-external'></i></a>
+                    <a href="./projetos/Lampada_CSS/index.html" target="_blank"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
 
@@ -211,7 +212,7 @@
     </section>
 
     <!-- contact section -->
-    <section class="contact" id="contact">
+    <!-- <section class="contact" id="contact">
         <h2 class="heading">Fale <span>Comigo!</span></h2>
 
         <form action="#">
@@ -227,7 +228,7 @@
             <textarea name="" id="" cols="30" rows="10" placeholder="Sua mensagem"></textarea>
             <input type="submit" value="Enviar" class="btn">
         </form>
-    </section>
+    </section> -->
 
     <!-- footer section -->
     <footer class="footer">
