--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <a href="https://www.linkedin.com/in/pablopinheirocavalcante/" target="_blank"><i class='bx bxl-linkedin' ></i></a>
                 <a href="https://api.whatsapp.com/send/?phone=5511956291507&text&type=phone_number&app_absent=0" target="_blank"><i class='bx bxl-whatsapp'></i></a>
             </div>
-                <a href="cv_pablo_cavalcante.docx.pdf" download class="btn">Download CV</a>
+                <a href="cv_pablo.pdf" download class="btn">Download CV</a>
             </div>
 
         <div class="home-img">
