--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <a href="https://www.linkedin.com/in/pablopcavalcante/" target="_blank"><i class='bx bxl-linkedin' ></i></a>
                 <a href="https://api.whatsapp.com/send/?phone=5511956291507&text&type=phone_number&app_absent=0" target="_blank"><i class='bx bxl-whatsapp'></i></a>
             </div>
-                <a href="cv_pablo.pdf" download class="btn">Download CV</a>
+                <a href="pablocavalcante_cv.pdf" download class="btn">Download CV</a>
             </div>
 
         <div class="home-img">
@@ -233,7 +233,7 @@
     <!-- footer section -->
     <footer class="footer">
         <div class="footer-text">
-            <p>Copyright &copy; 2023 Desenvolvido por: Pablo Cavalcante</p>
+            <p>Desenvolvido por: Pablo Cavalcante</p>
         </div>
 
         <div class="footer-iconTop">
