atualizações sobre mim e cv

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <a href="#home" class="active">Home</a>
             <a href="#about">Sobre</a>
             <a href="#services">Conhecimentos</a>
-            <a href="#portfolio">Portfolio</a>
+            <a href="#portfolio">Projetos</a>
             <!-- <a href="#contact">Contato</a> -->
         </nav>
     </header>
@@ -48,7 +48,7 @@
                 <a href="https://www.linkedin.com/in/pablopcavalcante/" target="_blank"><i class='bx bxl-linkedin' ></i></a>
                 <a href="https://api.whatsapp.com/send/?phone=5511956291507&text&type=phone_number&app_absent=0" target="_blank"><i class='bx bxl-whatsapp'></i></a>
             </div>
-                <a href="pablocavalcante_cv.pdf" download class="btn">Download CV</a>
+                <a href="cv_pablocavalcante.pdf" download class="btn">Download CV</a>
             </div>
 
         <div class="home-img">
@@ -64,10 +64,10 @@
 
         <div class="about-content">
             <h2 class="heading">Sobre <span>Mim</span></h2>
-            <h3>Futuro Frontend Developer</h3>
-            <p>Me chamo Pablo Pinheiro Cavalcante, sou estudante de Ciências da Computação,
-                estou no 6º Semestre, gosto muito de tecnologias e pretendo seguir uma carreira
-                como Web Development.
+            <h3>Futuro Developer</h3>
+            <p>👋 Olá! Me chamo Pablo Cavalcante, sou estudante de Ciências da Computação pela Anhembi Morumbi.
+                Pretendo seguir carreira como Web Development, tenho experiências com ferramentas como: 
+                HTML / CSS / Javascript / ReactJS / Typescript entre outras.
             </p>
             <!-- <a href="#" class="btn">Read More</a> -->
         </div>
